# articulated_tractor_trailer_paper

./: README.md
articulated_tractor_trailer_control/: CMakeLists.txt  package.xml
articulated_tractor_trailer_control/config/: control.yaml  gazebo_ros_control.yaml
articulated_tractor_trailer_control/launch/: control.launch
articulated_tractor_trailer_description/: CMakeLists.txt  package.xml
articulated_tractor_trailer_description/launch/: description.launch  gazebo_link_publisher.launch
articulated_tractor_trailer_description/scripts/: gazebo_link_pose
articulated_tractor_trailer_description/urdf/: articulated_tractor_trailer.gazebo  articulated_tractor_trailer.xacro  inertial_macros.urdf.xacro  model_properties.xacro  steering.xacro  trailer.urdf.xacro  wheel.xacro
articulated_tractor_trailer_gazebo/: CMakeLists.txt  package.xml
articulated_tractor_trailer_gazebo/launch/: articulated_tractor_trailer_empty_low_resources.launch  articulated_tractor_trailer_empty_world.launch  spawn_vehicle.launch
articulated_tractor_trailer_gazebo/worlds/: empty_low_resources.world
articulated_tractor_trailer_joint_position_publisher/: CMakeLists.txt  package.xml
articulated_tractor_trailer_joint_position_publisher/launch/: articulated_tractor_trailer_joint_position_publisher.launch
articulated_tractor_trailer_joint_position_publisher/msg/: JointPosition.msg
articulated_tractor_trailer_trajectory/: CMakeLists.txt  package.xml
articulated_tractor_trailer_trajectory/src/: trajectory_generation.py  (+6 more)
articulated_tractor_trailer_viz/: CMakeLists.txt  package.xml
(+5 files in other folders)
